--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -4,6 +4,41 @@
     box-shadow: 0 5px 20px #f0f0f0;
 }
 
+.nav-menu {
+        display: flex;
+        position: fixed;
+        top: -6%;
+        left: 10%;
+        cursor: pointer; 
+        color: $dark-grey;
+        height: 10vh;
+    .logo-container {
+        background-image: url(../../img/logo-txt.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        flex-basis: 20%;
+        min-width: 50px;
+        position: relative;
+    } 
+    ul {
+        list-style-type: none;
+        display: flex;
+        justify-content: space-between;
+        font-family: $font-primary;
+        li {
+            margin-top: 8vw;
+            margin-right: 4vw;
+            .nav-item {
+                text-decoration: none;
+                text-transform: uppercase;
+                font-size: 15px;
+                color: $dark-grey;
+                }
+            }
+        }
+}
+
 .main-header {
     .header-left-container {
         position: absolute;
@@ -18,39 +53,7 @@
     .header-center-container {
         margin: 1vw 0 0 13vw;
         width: 55%;
-        .menu-container {
-            display: flex;
-            margin: 10px 0;
-            .logo-container {
-                background-image: url(../../img/logo-txt.png);
-                background-repeat: no-repeat;
-                background-size: contain;
-                background-position: center;
-                flex-basis: 20%;
-                min-width: 50px;
-            } 
-            .nav-menu {
-                display: inline-block;
-                cursor: pointer; 
-                color: $dark-grey;
-                ul {
-                    list-style-type: none;
-                    display: flex;
-                    justify-content: space-between;
-                    font-family: $font-primary;
-                    li {
-                        margin-top: 8vw;
-                        margin-right: 4vw;
-                        .nav-item {
-                            text-decoration: none;
-                            text-transform: uppercase;
-                            font-size: 15px;
-                            color: $dark-grey;
-                            }
-                        }
-                    }
-            }
-        }  
+
     }    
     .header-right-container {
         position: absolute;
@@ -324,13 +327,25 @@
         flex-basis: 60%;
         padding: 5%;
         background-color: #1ba4ce;
-        input {
+        padding: 5% 10% 5% 5%;
+        input,select {
             background-color: #1ba4ce;
             border-width: 0 0 1px 0;
             border-color: white;
+            color: white;
+            text-transform: uppercase;
+            padding: 10px;
+            width: 38%;
+            padding-bottom: 10px;
+            margin-right: 20px;
+        select {
+            padding-left: 1%;
+        }
         }
         ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
             color: white;
+            text-transform: uppercase;
+            padding-bottom: 10px;
         }
         input:focus,
         select:focus,
