--- a/css/style.css
+++ b/css/style.css
@@ -557,13 +557,10 @@ input[type=checkbox], input[type=radio] {
   border-color: white;
   color: white;
   text-transform: uppercase;
-  padding: 10px;
+  text-align: left;
   width: 38%;
   padding-bottom: 10px;
   margin-right: 20px;
-}
-.form-section .form input select, .form-section .form select select {
-  padding-left: 1%;
 }
 .form-section .form ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
   color: white;
