--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -334,12 +334,13 @@
             border-color: white;
             color: white;
             text-transform: uppercase;
-            padding: 10px;
+            // padding: 10px;
+            text-align: left;
             width: 38%;
             padding-bottom: 10px;
             margin-right: 20px;
         select {
-            padding-left: 1%;
+            // padding-left: 1%;
         }
         }
         ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
