--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -7,11 +7,13 @@
 .nav-menu {
         display: flex;
         position: fixed;
-        top: -6%;
-        left: 10%;
+        left: 13%;
         cursor: pointer; 
         color: $dark-grey;
         height: 10vh;
+        width: 59%;
+        z-index: 1;
+        background-color: white;
     .logo-container {
         background-image: url(../../img/logo-txt.png);
         background-repeat: no-repeat;
@@ -27,13 +29,16 @@
         justify-content: space-between;
         font-family: $font-primary;
         li {
-            margin-top: 8vw;
+            display: list-item;
+            padding: 5px 10px;
             margin-right: 4vw;
             .nav-item {
                 text-decoration: none;
                 text-transform: uppercase;
                 font-size: 15px;
                 color: $dark-grey;
+                margin-left: 70%;
+                line-height: 7vh;
                 }
             }
         }
@@ -320,34 +325,54 @@
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
+    width: 100%;
     .form-img {
         flex-basis: 40%;
     }
     .form {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: baseline;
         flex-basis: 60%;
         padding: 5%;
         background-color: #1ba4ce;
         padding: 5% 10% 5% 5%;
-        input,select {
+        input {
             background-color: #1ba4ce;
             border-width: 0 0 1px 0;
             border-color: white;
             color: white;
             text-transform: uppercase;
-            // padding: 10px;
+            padding: 4%;
             text-align: left;
-            width: 38%;
+            flex-basis: 38%;
             padding-bottom: 10px;
             margin-right: 20px;
-        select {
-            // padding-left: 1%;
+            line-height: 3vh;
         }
+            
+        #notes {
+            padding-bottom: 8%;
         }
         ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
             color: white;
             text-transform: uppercase;
             padding-bottom: 10px;
         }
+        select {
+            flex-basis: 46%;
+            background-color: #1ba4ce;
+            border-width: 0 0 1px 0;
+            border-color: white;
+            color: white;
+            text-transform: uppercase;
+            padding-left: 3.5%;
+            text-align: left;
+            padding-bottom: 10px;
+            margin-right: 20px;
+            height: 8vh;
+        }
+
         input:focus,
         select:focus,
         textarea:focus,
