--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -4,6 +4,11 @@
     box-shadow: 0 5px 20px #f0f0f0;
 }
 
+
+.li-shown {
+    align-self: flex-end;
+}
+
 .nav-menu {
         display: flex;
         position: fixed;
@@ -28,6 +33,16 @@
         display: flex;
         justify-content: space-between;
         font-family: $font-primary;
+        .hamburger {
+            width: 55px;
+            height: 9px;
+            background-color: #1ba4ce;
+            margin: 8px 0;
+            display: none;
+            label[for="drop-nav"] {
+                display: none;
+            }
+          }
         li {
             display: list-item;
             margin-right: 4vw;
@@ -572,13 +587,12 @@
 
 .footer {
     display: block;
-    .nav-menu {
-        display: flex;
-        padding-left: 9%;
+    .nav-menu2 {
+        // display: flex;
+        // padding-left: 9%;
         cursor: pointer; 
         color: $dark-grey;
-        height: 10vh;
-        width: 55%;
+        // width: 55%;
         z-index: 1;
         background-color: white;
     .logo-container {
@@ -586,14 +600,14 @@
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
-        flex-basis: 20%;
-        min-width: 50px;
-        // position: relative;
+        width: 7vw;
+        height: 7vw;
+        margin: auto;
     } 
     ul {
         list-style-type: none;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         font-family: $font-primary;
         li {
             display: list-item;
@@ -608,4 +622,78 @@
             }
         }
     }
+    .copyright {
+        margin: auto;
+        text-align: center;
+        h7 {
+        font-family: $font-secondary;
+        text-transform: uppercase;
+        // font-family: $font-secondary;
+        font-size: 12px;
+        display: inline;
+        margin: 12px;
+        text-align: center;
+        }
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .nav-menu ul {
+        flex-direction: column;
+        position: absolute;
+        right: -60%;
+        justify-content: right;
+        padding-right: 10%;
+        .hamburger {
+            align-self: flex-end;
+            margin-left: auto;
+            padding-right: 1%;
+        }
+    }
+
+    .li-shown::before {
+        content: "X";
+        font-size: 2em; 
+        color: white;
+    }
+
+    .nav-menu ul li,
+    .nav-menu ul li .shown {
+        margin-right: 0;
+        width: 45vw;
+        display: list-item;
+        margin-right: 4vw;
+        text-align: right;
+        color: white;
+        background-color: #1ba4ce;
+        padding-right: 5%;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 15px;
+        line-height: 7vh;
+    } 
+    
+    .nav-menu ul li .nav-item {
+        display: none;
+        text-align: right;
+        color: white;
+        background-color: #1ba4ce;
+        padding-right: 5%;
+    }
+
+    .nav-menu ul .li-shown {
+        content: "X";
+        padding-right: 10%;
+        margin-right: -19px;
+        width: 42.5vw;
+    }
+
+    .nav-menu ul .hamburger {
+        display: block;
+        
+    }
+    .main-header .header-right-container {
+        display: none;
+    }
+
 }
