--- a/css/style.css
+++ b/css/style.css
@@ -569,7 +569,7 @@ input[type=checkbox], input[type=radio] {
   height: 40vw;
 }
 .form-section .form-container .form {
-  padding: 5% 25% 15% 10%;
+  padding: 5% 25% 0% 10%;
   overflow: hidden;
 }
 .form-section .form-container .form .input-common {
@@ -577,7 +577,6 @@ input[type=checkbox], input[type=radio] {
   border-width: 0 0 1px 0;
   border-color: white;
   color: white;
-  text-transform: uppercase;
   padding: 4%;
   text-align: left;
   margin-right: 15px;
@@ -627,7 +626,7 @@ input[type=checkbox], input[type=radio] {
   line-height: 40px;
   font-size: 12px;
   font-weight: 400;
-  margin: 30px;
+  margin: 15px 20px;
   border-radius: 13%/50%;
   border-color: transparent;
   text-transform: uppercase;
@@ -738,7 +737,7 @@ input[type=checkbox], input[type=radio] {
   overflow: hidden;
 }
 .contact .contact-container .form-container .contact-form {
-  padding: 0% 25% 15% 10%;
+  padding: 0% 25% 0% 10%;
   overflow: hidden;
 }
 .contact .contact-container .form-container .contact-form .input-common {
@@ -787,7 +786,7 @@ input[type=checkbox], input[type=radio] {
   line-height: 40px;
   font-size: 12px;
   font-weight: 400;
-  margin-top: 30px;
+  margin: 30px;
   border-radius: 13%/50%;
   border-color: transparent;
   text-transform: uppercase;
