--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -3,4 +3,16 @@ $font-primary: "Roboto", sans-serif;
 $font-secondary: "Bellota", sans-serif;
 
 // Colors
+$blue: #1ba4ce;
+$violet: #473452;
 $dark-grey: #30383b;
+
+// Size
+$smallest: 16px;
+$small: 15px;
+$medium: 22px;
+$big: 42px;
+$biggest: 50px;
+
+// Boxes
+$box-shadow-default: 0 5px 20px #f0f0f0;
