--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,8 @@ table {
 
 input[type=search] {
   -webkit-appearance: textfield;
+  -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration {
@@ -229,10 +231,6 @@ input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-se
 input[type=checkbox], input[type=radio] {
   box-sizing: border-box;
   padding: 0;
-}
-
-.box-shadow {
-  box-shadow: 0 5px 20px #f0f0f0;
 }
 
 .li-shown {
@@ -393,8 +391,7 @@ input[type=checkbox], input[type=radio] {
 .about-img-container .about-img-item .shown {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 .about-img-container .about-img-item .hidden-img-container {
   position: absolute;
